--- a/readme.adoc
+++ b/readme.adoc
@@ -17,7 +17,7 @@ First things
 - setup structure libcixl [done]
 - colored cxl strings     [done]
 - game loop               [done]
-- decorated cxl strings
+- decorated cxl strings   [done]
 - format cxl strings api / vm / solution
 - simple efficient layers
 - Effects / Animations
